# StarWar

./: CMakeLists.txt  README.md  Utility.cpp  Utility.h  main.cpp
CollisionDetector/: CollisionDetector.cpp  CollisionDetector.h  Object.h
Drawer/: Drawer.cpp  Drawer.h
Drawer/Initializer/: Initializer.cpp  Initializer.h
Drawer/Timer/: Timer.cpp  Timer.h
Game/: Game.cpp  Game.h
Items/: PlusSign.cpp  PlusSign.h  RedArrow.cpp  RedArrow.h  item.cpp  item.h
Menu/: Menu.h
Mode/: ModeUtility.cpp  ModeUtility.h
Pickables/: Object.cpp  Object.h  PlusSign.cpp  PlusSign.h  RedArrow.cpp  RedArrow.h
Projectile/: Projectile.cpp  Projectile.h
SolarSystem/: Moon.h  Planet.h  SolarSystem.h  SpaceBody.h  Sun.h
Spacecraft/: Enemy.cpp  Enemy.h  Spacecraft.cpp  Spacecraft.h  User.cpp  User.h
Textures/: Texture.cpp  Texture.h
Views/: Views.cpp  Views.h
lib/: getBMP.cpp
sfx/: SoundManager.cpp  SoundManager.h
